--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-  <div class="container" id="member_list"></div>
+  <div class="container">
+    <div class="d-flex flex-wrap pt-5" id="member_list">
+      <div class="col-12 text-center mb-5">
+        <h1>Our Team</h1>
+      </div>
+    </div>
+  </div>
   <script src="./js/script.js"></script>
 </body>
 </html>
